[package]
name = "madome-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
async-trait = "0.1.52"
hyper = { version = "0.14.16", features = ["server"] }
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11.9", features = ["json"] }
sai = "0.1.4"
thiserror = "1.0.30"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
simple_logger = "2.1.0"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "sqlx-chrono", "sqlx-uuid"], default-features = false }
inspect = { git = "https://github.com/syrflover/inspect-rs" }
openssl = { version = "0.10.38", features = ["vendored"] }
util = { path = "../util" }
madome-sdk = { path = "../madome-sdk" }
